# medium_crawler

./: .env.sample  .gitattributes  .gitignore  GMAIL_API_SETUP.md  README.md  auth.py  config.py  crawler.py  gmail_checker.py  main.py  pyproject.toml  requirements.txt  urls.txt  urls.txt.example  utils.py
docs/: DOWNLOAD_IMPLEMENTATION_REPORT.md  GMAIL_API_SETUP.md
