[project]
name = "medium-crawler"
version = "0.1.0"
description = "Medium crawler with Gmail authentication"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "greenlet>=3.2.0",
    "playwright>=1.56.0",
    "google-auth>=2.34.0",
    "google-auth-oauthlib>=1.2.1",
    "google-auth-httplib2>=0.2.0",
    "google-api-python-client>=2.150.0",
    "python-dotenv>=1.0.1",
    "beautifulsoup4>=4.12.3",
]

[tool.black]
line-length = 100
# Black은 PEP 8을 따르므로 항상 4칸 들여쓰기를 사용합니다.
# 2칸 들여쓰기를 원하시면 Black 대신 autopep8이나 다른 formatter를 사용하세요.
